# sqldbagent

./: .env.example  .readthedocs.yaml  AGENTS.md  Makefile  README.md  alembic.ini  langgraph.json  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
.trunk/: trunk.yaml
docs/: Makefile  TODO.md  make.bat
docs/_internal/: README.md  agent-architecture.md  bootstrap.md  implementation-roadmap.md  mcp-servers.md  mcps.md  memory.md  product-goal.md  skills.md  testing.md
docs/_internal/agent-platform-kit/: 01-overview.md  02-packages-and-interfaces.md  03-runtime-middleware-and-tools.md  04-persistence-memory-and-retrieval.md  05-deployment-and-observability.md  06-extraction-plan.md  07-pragmatic-recipes.md  README.md
docs/_internal/agent-platform-kit/skill-bundle/agent-platform-foundations/: SKILL.md
docs/_internal/agent-platform-kit/skill-bundle/agent-platform-foundations/references/: deployment-and-observability.md  extraction-plan.md  packages.md  persistence-memory-and-retrieval.md  pragmatic-recipes.md  runtime-middleware-and-tools.md
docs/_internal/agents/: README.md
docs/_internal/dashboard/: README.md  streamlit-dashboard.md
docs/_internal/handoff/: README.md  current.md  new-chat-prompt.md  template.md
docs/source/: agent-stack.md  cli.md  conf.py  configuration.md  development.md  getting-started.md  index.md  publishing.md
docs/source/_static/: custom.css
docs/source/reference/: configuration.md  core.md  dashboard.md  index.md  introspection.md  langgraph.md  profile.md  retrieval.md  safety.md  snapshot.md
infra/: compose.integration.yaml
migrations/: env.py  script.py.mako
migrations/versions/: 20260401_000001_create_demo_schema.py
src/sqldbagent/adapters/: shared.py
src/sqldbagent/adapters/langchain/: __init__.py  sql.py  tools.py
src/sqldbagent/adapters/langgraph/: __init__.py  agent.py  checkpoint.py  memory.py  middleware.py  model.py  observability.py  prompts.py  runtime.py  state.py  store.py
src/sqldbagent/adapters/mcp/: __init__.py  server.py
src/sqldbagent/cli/: __init__.py  _typer.py  app.py  config.py  dashboard.py  diagram.py  docs.py  inspect.py  mcp.py  profile.py  prompt.py  query.py  rag.py  snapshot.py
src/sqldbagent/core/: __init__.py  agent_context.py  bootstrap.py  config.py  enums.py  errors.py  serialization.py
src/sqldbagent/core/models/: __init__.py  catalog.py  profile.py  query.py
src/sqldbagent/dashboard/: __init__.py  app.py  models.py  service.py
src/sqldbagent/diagrams/: __init__.py  models.py  service.py
src/sqldbagent/docs/: __init__.py  models.py  service.py
src/sqldbagent/engines/: __init__.py  factory.py
src/sqldbagent/introspect/: __init__.py  base.py  service.py
src/sqldbagent/profile/: __init__.py  service.py
src/sqldbagent/prompts/: __init__.py  enhancement.py  exploration.py  models.py  service.py  tokens.py
src/sqldbagent/retrieval/: __init__.py  embeddings.py  models.py  service.py
src/sqldbagent/safety/: __init__.py  execution.py  guard.py  models.py  policies.py
src/sqldbagent/snapshot/: __init__.py  models.py  service.py
tests/: conftest.py  helpers.py
tests/e2e/: test_cli_postgres.py  test_cli_postgres_demo.py  test_cli_sqlite.py  test_mcp_postgres_demo.py
tests/integration/: test_langgraph_agent_checkpoint.py  test_langgraph_agent_memory.py  test_langgraph_runtime.py  test_live_inspection.py  test_live_mssql.py  test_retrieval_service.py
tests/unit/: test_adapters.py  test_cli_dashboard.py  test_cli_mcp.py  test_config.py  test_dashboard_app.py  test_dashboard_service.py  test_diagrams.py  test_documents.py  test_engines.py  test_introspection.py  test_langgraph_adapter.py  test_profile.py  test_prompts.py  test_query_execution.py  test_retrieval.py  test_safety.py  test_snapshot.py
