[project]
name = "sqldbagent"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Will", email = "you@example.com" }]
dependencies = [
  "pydantic>=2.12.5",
  "pydantic-settings>=2.13.1",
  "sqlalchemy>=2.0.48",
  "orjson>=3.11.8",
  "tenacity>=9.1.4",
  "networkx>=3.6.1",
  "jinja2>=3.1.6",
  "pyyaml>=6.0.3",
]
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
postgres = ["psycopg>=3.3.3"]
mssql = ["pyodbc>=5.3.0", "aioodbc>=0.5.0"]
cli = ["typer>=0.24.1", "rich>=14.3.3"]
tui = ["textual>=8.2.1", "rich>=14.3.3"]
dashboard = ["streamlit>=1.56.0", "pandas>=3.0.2", "plotly>=6.6.0"]
langchain = [
  "langchain>=1.2.14",
  "langchain-core>=1.2.24",
  "langchain-community>=0.4.1",
]
langgraph = ["langgraph>=1.1.4"]
mcp = ["fastmcp>=3.2.0"]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
docs = [
  "sphinx>=9.1.0",
  "myst-parser>=5.0.0",
  "furo>=2025.12.19",
  "sphinx-autodoc-typehints>=3.9.11",
  "autodoc-pydantic>=2.2.0",
  "sphinx-design>=0.7.0",
  "sphinx-copybutton>=0.5.2",
  "sphinxcontrib-mermaid>=2.0.1",
  "sphinx-inline-tabs>=2025.12.21.14",
  "sphinx-togglebutton>=0.4.5",
  "sphinx-autobuild>=2025.8.25",
  "linkify-it-py>=2.1.0",
]
test = [
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.1.0",
  "pytest-xdist>=3.8.0",
  "hypothesis>=6.151.10",
  "langchain-tests>=1.1.5",
]
lint = ["ruff>=0.15.8", "sqlfluff>=4.1.0", "pre-commit>=4.5.1"]
typecheck = ["mypy>=1.20.0"]
