[project]
name = "sqldbagent"
version = "0.1.3"
description = "Service-first database intelligence platform for safe inspection and agent-ready exports"
keywords = [
  "sql",
  "database",
  "agent",
  "langgraph",
  "langchain",
  "mcp",
  "postgres",
  "mssql",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "pydantic>=2.12.5",
  "pydantic-settings>=2.13.1",
  "sqlalchemy>=2.0.48",
  "aiosqlite>=0.21.0",
  "greenlet>=3.3.2",
  "sqlglot>=29.0.1",
  "orjson>=3.11.8",
  "tenacity>=9.1.4",
  "networkx>=3.6.1",
  "jinja2>=3.1.6",
  "pyyaml>=6.0.3",
]
requires-python = ">=3.13"
readme = "README.md"

[[project.authors]]
name = "Will"
email = "you@example.com"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/pr1m8/sqldbagent"
Repository = "https://github.com/pr1m8/sqldbagent"
Issues = "https://github.com/pr1m8/sqldbagent/issues"
Documentation = "https://sqldbagent.readthedocs.io/en/latest/"

[project.scripts]
sqldbagent = "sqldbagent.cli.app:app"

[project.optional-dependencies]
dashboard = ["streamlit>=1.56.0", "pandas>=3.0.2", "plotly>=6.6.0"]
lint = [
  "ruff>=0.15.8",
  "sqlfluff>=4.1.0",
  "pre-commit>=4.5.1",
  "commitizen>=4.9.1",
]
langgraph = [
  "langgraph>=1.1.4",
  "langgraph-sdk>=0.3.12",
  "langgraph-checkpoint-postgres>=3.0.5",
  "langgraph-cli[inmem]>=0.4.19",
]
langchain = [
  "langchain>=1.2.14",
  "langchain-core>=1.2.24",
  "langchain-community>=0.4.1",
  "langsmith>=0.7.24",
  "langchain-openai",
  "langchain-anthropic",
  "langchain-qdrant>=1.1.0",
  "qdrant-client>=1.17.1",
  "langchain-text-splitters>=1.1.1",
]
mcp = ["fastmcp>=3.2.0"]
docs = [
  "sphinx>=9.1.0",
  "myst-parser>=5.0.0",
  "furo>=2025.12.19",
  "sphinxext-opengraph>=0.13.0",
  "sphinx-last-updated-by-git>=0.3.8",
  "sphinx-notfound-page>=1.1.0",
  "sphinx-autodoc-typehints>=3.9.11",
  "autodoc-pydantic>=2.2.0",
  "sphinx-design>=0.7.0",
  "sphinx-copybutton>=0.5.2",
  "sphinxcontrib-mermaid>=2.0.1",
  "sphinx-inline-tabs>=2025.12.21.14",
  "sphinx-togglebutton>=0.4.5",
  "sphinx-autobuild>=2025.8.25",
  "linkify-it-py>=2.1.0",
]
release = ["twine>=6.2.0"]
test = [
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.1.0",
  "pytest-mock>=3.15.1",
  "pytest-socket>=0.7.0",
  "pytest-benchmark>=5.2.3",
  "pytest-xdist>=3.8.0",
  "syrupy>=5.1.0",
  "hypothesis>=6.151.10",
  "langchain-tests>=1.1.5",
]
typecheck = ["mypy>=1.20.0"]
mssql = ["pyodbc>=5.3.0", "aioodbc>=0.5.0"]
tui = ["textual>=8.2.1", "rich>=14.3.3"]
cli = ["typer>=0.24.1", "rich>=14.3.3"]
postgres = ["psycopg>=3.3.3", "alembic>=1.18.4"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.3"
tag_format = "v$version"
update_changelog_on_bump = false
version_files = ["pyproject.toml:version"]

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
  "--disable-socket",
  "--allow-unix-socket",
  "--cov=src/sqldbagent",
  "--cov-report=term-missing",
]
testpaths = ["tests"]
markers = [
  "integration: marks tests that require an external database or container",
  "e2e: marks end-to-end workflow tests",
]

[tool.coverage.run]
branch = true
source = ["src/sqldbagent"]

[tool.coverage.report]
skip_covered = false
show_missing = true
fail_under = 70
